# backend/activity_engine/src/api/v1/routes/assessment.router.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import { AssessmentController } from "../controllers/assessment.controller";
+
+const router = Router();
+
+router.post("/submit", AssessmentController.submitAssessment);
+
+export default router;
